Colaboratory를 통해 생성됨

--- a/Q14.ipynb
+++ b/Q14.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPELa6wnq5AztVTjrbIAZr6",
+      "authorship_tag": "ABX9TyOwKz2yqBJsUb49vljI5olo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,12 +38,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "jZZaPyqz7gO1"
+        "id": "jZZaPyqz7gO1",
+        "outputId": "5138a7e3-61b7-4237-befc-d60b7429ca8a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "red\n",
+            "yellow\n",
+            "blue\n",
+            "violet\n"
+          ]
+        }
+      ],
+      "source": [
+        "color_list = [\"red\", \"yellow\", \"blue\", \"violet\"]\n",
+        "for color in color_list:\n",
+        "  print(color)"
+      ]
     }
   ]
 }
