Colaboratory를 통해 생성됨

--- a/Q11.ipynb
+++ b/Q11.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNr0G5TIE6vSaqJgiQWiLUo",
+      "authorship_tag": "ABX9TyMr0vJRUUYeSKjIl6e2+DV3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,12 +38,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "jLJUZ6ON9p9p"
+        "id": "jLJUZ6ON9p9p",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f6ef4f42-ce35-49f9-d9c1-33a33e3f0851"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n"
+          ]
+        }
+      ],
+      "source": [
+        "my_list = [1,2,3,4,5]\n",
+        "print(\n",
+        "    len(my_list)\n",
+        "    )"
+      ]
     }
   ]
 }
