Colaboratory를 통해 생성됨

--- a/Q12.ipynb
+++ b/Q12.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMwz/Ljj84nS6TB6GrCjh6J",
+      "authorship_tag": "ABX9TyOl0y2HMMI951b0bNda6We9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,12 +37,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
-        "id": "jZZaPyqz7gO1"
+        "id": "jZZaPyqz7gO1",
+        "outputId": "a66ccfc0-e350-4ef3-c0c3-748c55f227b2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello\n"
+          ]
+        }
+      ],
+      "source": [
+        "my_string = \"Hello, world!\"\n",
+        "print(my_string[0:5])"
+      ]
     }
   ]
 }
