Colaboratory를 통해 생성됨

--- a/Q13.ipynb
+++ b/Q13.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMna/EhEaoeHa9EQ7OTYqcM",
+      "authorship_tag": "ABX9TyPkmrAmhbeQ/3nRLDRZva9a",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,12 +38,42 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
         "id": "2atc9-R69Wuz"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import random"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numbers = []\n",
+        "for _ in range(5):\n",
+        "  x = random.randint(0,100)\n",
+        "  numbers.append(x)\n",
+        "\n",
+        "print(numbers)"
+      ],
+      "metadata": {
+        "id": "hHmMa_HMJGoH",
+        "outputId": "01880d1a-2396-43b7-99d9-7807e09fe374",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[2, 29, 78, 81, 12]\n"
+          ]
+        }
+      ]
     }
   ]
 }
