Colaboratory를 통해 생성됨

--- a/Q11.ipynb
+++ b/Q11.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMr0vJRUUYeSKjIl6e2+DV3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/gnyr324/DLG3/blob/main/Q11.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/gnudahyeon/DLG3/blob/main/Q11.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -44,7 +43,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f6ef4f42-ce35-49f9-d9c1-33a33e3f0851"
+        "outputId": "3568d331-7e4c-4f44-b684-4ad819411fbd"
       },
       "outputs": [
         {
@@ -57,9 +56,7 @@
       ],
       "source": [
         "my_list = [1,2,3,4,5]\n",
-        "print(\n",
-        "    len(my_list)\n",
-        "    )"
+        "print(len(my_list))"
       ]
     }
   ]
