Colaboratory를 통해 생성됨

--- a/Q14.ipynb
+++ b/Q14.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOwKz2yqBJsUb49vljI5olo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/gnyr324/DLG3/blob/main/Q14.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/HonestHabin/DLG3/blob/main/Q14.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -41,7 +40,7 @@
       "execution_count": 1,
       "metadata": {
         "id": "jZZaPyqz7gO1",
-        "outputId": "5138a7e3-61b7-4237-befc-d60b7429ca8a",
+        "outputId": "0d7bb2b7-8e92-4da3-e339-27101cf94573",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -53,15 +52,14 @@
           "text": [
             "red\n",
             "yellow\n",
-            "blue\n",
-            "violet\n"
+            "blue\n"
           ]
         }
       ],
       "source": [
-        "color_list = [\"red\", \"yellow\", \"blue\", \"violet\"]\n",
-        "for color in color_list:\n",
-        "  print(color)"
+        "color_list = [\"red\", \"yellow\", \"blue\"]\n",
+        "for col in color_list:\n",
+        "  print(col)"
       ]
     }
   ]
