Colaboratory를 통해 생성됨

--- a/Q12.ipynb
+++ b/Q12.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOl0y2HMMI951b0bNda6We9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,13 +22,13 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/gnyr324/DLG3/blob/main/Q12.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/2022013193/DLG3/blob/main/Q12.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Q12. Create a variable called my_string and set it to \"Hello, world!\". Use slicing to print the first 5 characters of the string."
+        "Q12. Create a **variable** called my_string and set it to \"Hello, world!\". Use slicing to print the first 5 characters of the string."
       ],
       "metadata": {
         "id": "cZg5eaqi7ld1"
@@ -37,26 +36,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 1,
       "metadata": {
         "id": "jZZaPyqz7gO1",
-        "outputId": "a66ccfc0-e350-4ef3-c0c3-748c55f227b2",
+        "outputId": "8a3be45d-31af-494c-f385-bcd5e7423af7",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 35
         }
       },
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Hello\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Hello'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 1
         }
       ],
       "source": [
         "my_string = \"Hello, world!\"\n",
-        "print(my_string[0:5])"
+        "my_string[0:5]"
       ]
     }
   ]
